docker_convert/stirling/stirling-pdf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: stirling-pdf
  name: stirling-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: stirling-pdf
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: stirling-pdf
    spec:
      containers:
        - env:
            - name: DOCKER_ENABLE_SECURITY
              value: "false"
            - name: INSTALL_BOOK_AND_ADVANCED_HTML_OPS
              value: "false"
            - name: LANGS
              value: en_GB
          image: frooodle/s-pdf:latest
          name: stirling-pdf
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/share/tessdata
              name: stirling-pdf-claim0
            - mountPath: /configs
              name: stirling-pdf-claim1
      restartPolicy: Always
      volumes:
        - name: stirling-pdf-claim0
          persistentVolumeClaim:
            claimName: stirling-pdf-claim0
        - name: stirling-pdf-claim1
          persistentVolumeClaim:
            claimName: stirling-pdf-claim1
